<resources>
    <string name="app_name">TextSecure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_need_to_have_entered_your_passphrase_before_managing_keys">You need to have entered your passphrase before managing keys...</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <string name="ApplicationPreferencesActivity_messages_per_conversation">messages per conversation</string>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <string name="ApplicationPreferencesActivity_are_you_sure_you_would_like_to_immediately_trim_all_conversation_threads_to_the_s_most_recent_messages">Are you sure you would like to immediately trim all conversation threads to the %s most recent messages?</string>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_my">My</string>
    <string name="ApplicationPreferencesActivity_disable_storage_encryption">Disable storage encryption?</string>
    <string name="ApplicationPreferencesActivity_warning_this_will_disable_storage_encryption_for_all_messages">
        Warning, this will disable storage encryption for all messages and keys. Your encrypted
        sessions will continue to function, but anyone with physical access to your device will be
        able to access them.
    </string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering...</string>
    <string name="ApplicationPreferencesActivity_unregistering_for_data_based_communication">Unregistering for data based communication</string>
    <string name="ApplicationPreferencesActivity_disable_push_messages">Disable push messages?</string>
    <string name="ApplicationPreferencesActivity_this_will_disable_push_messages">
        This will disable push messages by unregistering you from the server.
        You will need to re-register your phone number to use push messages again in the future.
    </string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_you_are_not_registered_with_the_push_service">You are not registered with the push service...</string>
    <string name="ApplicationPreferencesActivity_updating_directory">Updating directory</string>
    <string name="ApplicationPreferencesActivity_updating_push_directory">Updating push directory...</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">Incoming SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">Incoming SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_textsecure_your_default_sms_app">Touch to make TextSecure your default SMS app</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_sending_message">Error sending message</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to disk. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_received_and_processed_key_exchange_message">Received and processed key exchange message.</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Error, received stale key exchange message.</string>
    <string name="ConversationItem_received_key_exchange_message_click_to_process">Received key exchange message, click to process.</string>
    <string name="ConversationItem_received_plaintext_message_click_to_terminate">Received a plaintext SMS while you have a secure session open. If they don\'t have a session open, messages you send will appear as garbled text. Click to terminate secure session.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_group_action_joined">%1$s have joined the group.</string>
    <string name="conversation_item__mms_image_description">Media message</string>
    <string name="conversation_item__secure_message_description">Secure message indicator</string>
    <string name="conversation_item_sent__delivered_description">Delivered Indicator</string>
    <string name="conversation_item_received__download">Download</string>
    <string name="conversation_item_received__downloading">Downloading</string>
    <string name="log_submit_activity__confirmation">This log will be posted publicly online for TextSecure contributors to view. Feel free to examine or edit the logs below before hitting submit.</string>
    <string name="log_submit_activity__button_cancel">Don\'t submit</string>
    <string name="log_submit_activity__button_ok">Submit</string>
    <string name="registration_problems__some_possible_problems_include">Some possible problems
        include:
    </string>
    <string name="registration_problems__sms_interceptors">SMS interceptors.</string>
    <string name="registration_problems__some_third_party_text_messaging_clients_such_as_handcent">
        Some third party text messaging clients, such as Handcent or GoSMS, behave poorly and
        intercept all incoming SMS messages. Check to see if you received a text message that starts
        with \'Your TextSecure verification code:\', in which case you\'ll need to configure your
        third party text messaging app to let text messages through.
    </string>
    <string name="registration_problems__incorrect_number">Incorrect number.</string>
    <string name="registration_problems__please_checkt_to_make_sure_you_entered_your_number_correctly">
        Please check to make sure you entered your number correctly, and that it is formatted correctly for
        your region.
    </string>
    <string name="registration_problems__google_voice">Google Voice.</string>
    <string name="preferences__pref_all_sms_title">Receive all SMS</string>
    <string name="preferences__pref_all_mms_title">Receive all MMS</string>
    <string name="preferences__use_textsecure_for_viewing_and_storing_all_incoming_text_messages">Use TextSecure for viewing and storing all incoming text messages</string>
    <string name="preferences__use_textsecure_for_viewing_and_storing_all_incoming_multimedia_messages">Use TextSecure for viewing and storing all incoming multimedia messages</string>
    <string name="preferences__enable_enter_key_title">Enable Enter key</string>
    <string name="preferences__replace_smiley_with_enter_key">Replace the smiley key with an Enter key</string>
    <string name="preferences__pref_enter_sends_title">Enter key sends</string>
    <string name="preferences__pressing_the_enter_key_will_send_text_messages">Pressing the Enter key will send text messages</string>
    <string name="preferences__choose_identity">Choose identity</string>
    <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Choose your contact entry from the contacts list.</string>
    <string name="preferences__change_passphrase">Change passphrase</string>
    <string name="preferences__change_my_passphrase">Change my passphrase</string>
    <string name="preferences__complete_key_exchanges">Complete key exchanges</string>
    <string name="preferences__screen_security">Screen security</string>
    <string name="preferences__automatically_complete_key_exchanges_for_new_sessions_or_for_existing_sessions_with_the_same_identity_key">Automatically complete key exchanges for new sessions or for existing sessions with the same identity key</string>
    <string name="preferences__disable_screen_security_to_allow_screen_shots">Block screenshots in the recents list and inside the app</string>
    <string name="preferences__forget_passphrase_from_memory_after_some_interval">Forget passphrase from memory after some interval</string>
    <string name="preferences__timeout_passphrase">Timeout passphrase</string>
    <string name="preferences__pref_timeout_interval_dialogtitle">Select passphrase timeout</string>
    <string name="preferences__pref_timeout_interval_title">Timeout interval</string>
    <string name="preferences__the_amount_of_time_to_wait_before_forgetting_passphrase">The amount of time to wait before forgetting passphrase from memory</string>
    <string name="preferences__advanced_mms_access_point_names">MMS preferences</string>
    <string name="preferences__enable_manual_mms">Enable manual MMS</string>
    <string name="preferences__override_system_mms_settings">Override system MMS settings with the information below.</string>
    <string name="preferences__mmsc_url_required">MMSC URL (Required)</string>
    <string name="preferences__mms_proxy_host_optional">MMS Proxy Host (Optional)</string>
    <string name="preferences__mms_proxy_port_optional">MMS Proxy Port (Optional)</string>
    <string name="preferences__sms_delivery_reports">SMS delivery reports</string>
    <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Request a delivery report for each SMS message you send</string>
    <string name="preferences__automatically_delete_older_messages_once_a_conversation_thread_exceeds_a_specified_length">Automatically delete older messages once a conversation thread exceeds a specified length</string>
    <string name="preferences__delete_old_messages">Delete old messages</string>
    <string name="preferences__conversation_length_limit">Conversation length limit</string>
    <string name="preferences__trim_all_threads_now">Trim all threads now</string>
    <string name="preferences__scan_through_all_conversation_threads_and_enforce_conversation_length_limits">Scan through all conversation threads and enforce conversation length limits</string>
    <string name="preferences__make_default_sms_app">Set as default SMS app</string>
    <string name="preferences__make_textsecure_the_default_sms_mms_app">Make TextSecure the default SMS/MMS application for your system.</string>
    <string name="preferences__use_the_data_channel_for_communication_with_other_textsecure_users">
        Increase privacy and avoid SMS fees by using the data channel for communication with other TextSecure users
    </string>
    <string name="preferences__allow_sms_fallback">Allow outgoing SMS to</string>
    <string name="preferences__submit_debug_log">Submit debug log</string>
    <string name="conversation_button_context__send_textsecure_message">Send TextSecure message</string>
    <string name="conversation_button_context__send_secure_sms">Send secure SMS</string>
    <string name="conversation_button_context__send_insecure_sms">Send insecure SMS</string>
    <string name="conversation_button_context__send_secure_mms">Send secure MMS</string>
    <string name="conversation_button_context__send_insecure_mms">Send insecure MMS</string>
</resources>