<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:key="pref_enable_passphrase_temporary"
                        android:defaultValue="true"
                        android:title="@string/preferences__enable_passphrase"
                        android:summary="@string/preferences__enable_local_encryption_of_messages_and_keys"/>

    <Preference android:key="pref_change_passphrase"
                android:title="@string/preferences__change_passphrase"
                android:summary="@string/preferences__change_my_passphrase"
                android:dependency="pref_enable_passphrase_temporary"/>

    <CheckBoxPreference android:defaultValue="false"
                        android:key="pref_timeout_passphrase"
                        android:title="@string/preferences__timeout_passphrase"
                        android:summary="@string/preferences__forget_passphrase_from_memory_after_some_interval"
                        android:dependency="pref_enable_passphrase_temporary"/>

    <org.thoughtcrime.securesms.preferences.PassphraseTimeoutPreference
        android:key="pref_timeout_interval"
        android:defaultValue="300"
        android:title="@string/preferences__pref_timeout_interval_title"
        android:summary="@string/preferences__the_amount_of_time_to_wait_before_forgetting_passphrase"
        android:dependency="pref_timeout_passphrase"
        android:dialogTitle="@string/preferences__pref_timeout_interval_dialogtitle" />

    <CheckBoxPreference android:defaultValue="true"
                        android:key="pref_screen_security"
                        android:title="@string/preferences__screen_security"
                        android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots" />
</PreferenceScreen>
