<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <View android:id="@+id/triangle_tick"
          android:layout_width="12dp"
          android:layout_height="15dp"
          android:layout_marginTop="12dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true" />

    <LinearLayout android:id="@+id/thumbnail_container"
                  android:layout_toRightOf="@id/triangle_tick"
                  android:layout_toEndOf="@id/triangle_tick"
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

        <org.thoughtcrime.securesms.components.ThumbnailView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/media_bubble_height"
                android:layout_marginRight="@dimen/message_bubble_end_padding"
                android:visibility="gone"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:contentDescription="@string/conversation_item__mms_image_description"
                app:riv_corner_radius="@dimen/message_bubble_corner_radius"
                app:riv_border_width="@dimen/media_bubble_border_width"
                tools:src="@drawable/ic_video_light" />
    </LinearLayout>

    <LinearLayout android:id="@+id/body_bubble"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/triangle_tick"
                  android:layout_toEndOf="@id/triangle_tick"
                  android:layout_below="@id/thumbnail_container"
                  android:orientation="vertical">

        <TextView android:id="@+id/conversation_item_body"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingTop="5dip"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:textColor="?conversation_received_text_primary_color"
                  android:textSize="16sp"
                  android:autoLink="all"
                  android:linksClickable="true" />

        <LinearLayout android:id="@+id/mms_download_controls"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <Button android:id="@+id/mms_download_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/conversation_item_received__download"
                    android:visibility="gone" />

            <TextView android:id="@+id/mms_label_downloading"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"
                      android:gravity="center"
                      android:text="@string/conversation_item_received__downloading"
                      android:visibility="gone" />

        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingTop="2dip"
                      android:paddingLeft="8dp"
                      android:paddingRight="5dp"
                      android:paddingBottom="5dp"
                      android:orientation="horizontal"
                      android:gravity="left">

            <ImageView android:id="@+id/delivered_indicator"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingRight="3dip"
                       android:src="?conversation_delivery_delivered"
                       android:contentDescription="@string/conversation_item_sent__delivered_description"
                       android:visibility="gone" />

            <ImageView android:id="@+id/sms_secure_indicator"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:paddingRight="4dp"
                       android:paddingTop="2dp"
                       android:src="?menu_lock_icon_small_received"
                       android:contentDescription="@string/conversation_item__secure_message_description"
                       android:visibility="gone" />

            <TextView android:id="@+id/conversation_item_date"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="left"
                      android:paddingTop="1dip"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:textColor="?conversation_received_text_secondary_color"
                      android:textSize="@dimen/conversation_item_date_text_size"
                      android:fontFamily="sans-serif-light"
                      android:autoLink="none"
                      android:linksClickable="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>